--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^9.36.0",
-    "eslint-plugin-security": "^3.0.1"
+    "eslint": "^9.12.0",
+    "eslint-plugin-security": "^3.0.1",
+    "cross-spawn": "^7.0.5"
   }
 }
